--- a/styles/style.css
+++ b/styles/style.css
@@ -165,9 +165,9 @@ a {
           align-items: center;
   -ms-flex-line-pack: justify;
       align-content: space-between;
-  margin: auto;
-  margin-top: 42px;
-  width: 596px;
+  margin: 0 auto;
+  padding-top: 50px;
+  width: 620px;
   height: 620px;
 }
 .header__bg {
@@ -175,8 +175,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: 100vh;
   top: 0;
   left: 0;
   z-index: -1;
@@ -226,7 +225,6 @@ a {
 
 .section__about {
   border: 1px solid #E6E6E6;
-  margin-top: 86px;
   z-index: -1;
 }
 
@@ -463,7 +461,6 @@ a {
   background-size: cover;
   width: 100%;
   height: 498px;
-  position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
@@ -515,7 +512,7 @@ a {
   background-color: #000;
   width: 100%;
   height: 100px;
-  margin-top: 18.5%;
+  margin-top: -2px;
 }
 .newsletter p {
   font-family: 'Open Sans';
@@ -576,6 +573,19 @@ a {
   background-color: #000;
   width: 100%;
   height: 260px;
+  margin-top: -2px;
+  /*     &__flex-titles {
+          margin-left: 15%;
+          h4 {
+          display: inline-block;
+          &:nth-of-type(2) {
+              margin-left: 20.7%;
+          }
+          &:nth-of-type(3) {
+              margin-left: 26.7%;
+          }
+          }
+      } */
 }
 .footer li {
   list-style-type: none;
@@ -641,18 +651,6 @@ a {
   -webkit-filter: brightness(0) invert(1);
           filter: brightness(0) invert(1);
   margin-left: 24px;
-}
-.footer__flex-titles {
-  margin-left: 15%;
-}
-.footer__flex-titles h4 {
-  display: inline-block;
-}
-.footer__flex-titles h4:nth-of-type(2) {
-  margin-left: 20.7%;
-}
-.footer__flex-titles h4:nth-of-type(3) {
-  margin-left: 26.7%;
 }
 .footer__flex-list {
   width: 70%;
