--- a/styles/style.scss
+++ b/styles/style.scss
@@ -206,17 +206,16 @@ $mainFont: 'Open Sans';
     justify-content: space-between;
     align-items: center;
     align-content: space-between;
-    margin: auto;
-    margin-top: 42px;
-    width: 596px;
+    margin: 0 auto;
+    padding-top: 50px;
+    width: 620px;
     height: 620px;
     &__bg {
         background-image: url(../images/main-bg.png);
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-        height: 100%;
-        position: absolute;
+        height: 100vh;
         top: 0;
         left: 0;
         z-index: -1;
@@ -273,7 +272,6 @@ $mainFont: 'Open Sans';
 
 .section__about {
     border: 1px solid #E6E6E6;
-    margin-top: 86px;
     z-index: -1;
 }
 
@@ -493,7 +491,6 @@ $mainFont: 'Open Sans';
         background-size: cover;
         width: 100%;
         height: 498px;
-        position: absolute;
         top: 0;
         left: 0;
         z-index: -1;
@@ -541,7 +538,7 @@ $mainFont: 'Open Sans';
     background-color: #000;
     width: 100%;
     height: 100px;
-    margin-top: 18.5%;
+    margin-top: -2px;
     p {
         font-family: 'Open Sans';
         font-style: normal;
@@ -598,6 +595,7 @@ $mainFont: 'Open Sans';
     background-color: #000;
     width: 100%;
     height: 260px;
+    margin-top: -2px;
     li {
         list-style-type: none;
     }
@@ -668,7 +666,7 @@ $mainFont: 'Open Sans';
         filter: brightness(0) invert(1);
         margin-left: 24px;
     }
-    &__flex-titles {
+/*     &__flex-titles {
         margin-left: 15%;
         h4 {
         display: inline-block;
@@ -679,7 +677,7 @@ $mainFont: 'Open Sans';
             margin-left: 26.7%;
         }
         }
-    }
+    } */
     &__flex-list {
         width: 70%;
         margin: 0 auto;
